--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -897,7 +897,7 @@ inputCantidad.addEventListener("keydown", (e) => {
   }
 });
 // =======================================================
-// 📸 ESCÁNER QR / CÓDIGO DE BARRAS MEJORADO
+// 📸 ESCÁNER QR / CÓDIGO DE BARRAS CON BALANZA Y EQUIVALENTES
 // =======================================================
 let html5Qr = null;
 let scannerActivo = false;
@@ -905,36 +905,21 @@ let scannerActivo = false;
 btnCam.addEventListener("click", async () => {
   try {
     if (!scannerActivo) {
-      // 🔳 Contenedor flotante con fondo oscuro
       const contenedor = document.createElement("div");
       contenedor.id = "lectorQR";
       Object.assign(contenedor.style, {
-        position: "fixed",
-        inset: "0",
-        background: "rgba(0,0,0,0.9)",
-        display: "flex",
-        flexDirection: "column",
-        alignItems: "center",
-        justifyContent: "center",
-        zIndex: "5000"
+        position: "fixed", inset: "0", background: "rgba(0,0,0,0.9)",
+        display: "flex", flexDirection: "column", alignItems: "center",
+        justifyContent: "center", zIndex: "5000"
       });
 
-      // 🔴 Botón cerrar
       const btnCerrar = document.createElement("button");
       btnCerrar.textContent = "✖ Cerrar cámara";
       Object.assign(btnCerrar.style, {
-        position: "absolute",
-        top: "12px",
-        right: "12px",
-        background: "#c0392b",
-        color: "#fff",
-        border: "none",
-        borderRadius: "8px",
-        padding: "8px 12px",
-        fontSize: "14px",
-        fontWeight: "600",
-        cursor: "pointer",
-        zIndex: "5100"
+        position: "absolute", top: "12px", right: "12px",
+        background: "#c0392b", color: "#fff", border: "none",
+        borderRadius: "8px", padding: "8px 12px",
+        fontSize: "14px", fontWeight: "600", cursor: "pointer"
       });
       btnCerrar.onclick = async () => {
         try { await html5Qr.stop(); } catch {}
@@ -942,33 +927,18 @@ btnCam.addEventListener("click", async () => {
         scannerActivo = false;
       };
 
-      // 🟩 Área de visión + marco guía
       const visor = document.createElement("div");
       visor.id = "visorCam";
-      visor.style.position = "relative";
       visor.style.width = "90%";
       visor.style.maxWidth = "340px";
-      visor.style.background = "#000";
       visor.style.borderRadius = "12px";
       visor.style.overflow = "hidden";
-
-      const marco = document.createElement("div");
-      Object.assign(marco.style, {
-        position: "absolute",
-        top: "50%", left: "50%",
-        width: "180px", height: "180px",
-        transform: "translate(-50%,-50%)",
-        border: "3px solid #00ff88",
-        borderRadius: "8px",
-        boxShadow: "0 0 20px rgba(0,255,136,0.6)"
-      });
-      visor.appendChild(marco);
+      visor.style.background = "#000";
 
       contenedor.appendChild(visor);
       contenedor.appendChild(btnCerrar);
       document.body.appendChild(contenedor);
 
-      // 🚀 Inicializa cámara trasera
       html5Qr = new Html5Qrcode("visorCam");
       const cams = await Html5Qrcode.getCameras();
       if (!cams.length) {
@@ -976,22 +946,37 @@ btnCam.addEventListener("click", async () => {
         contenedor.remove();
         return;
       }
-      const camTrasera = cams.find(c => /back|rear|environment/i.test(c.label)) || cams[0];
 
+      const camTrasera = cams.find(c => /back|rear|environment/i.test(c.label)) || cams[0];
       await html5Qr.start(
         camTrasera.id,
-        { fps: 10, qrbox: 250, aspectRatio: 1.333 },
+        { fps: 10, qrbox: 250 },
         async (texto) => {
           const codigo = texto.trim();
-          const idProd = codeIndex.get(codigo);
-          if (!idProd) {
-            mostrarToast("Producto no encontrado");
+          console.log("📦 Escaneado:", codigo);
+
+          // 🔹 Búsqueda avanzada: balanza, equivalentes y código directo
+          const resultados = buscarLocal(codigo);
+
+          if (!resultados.length) {
+            mostrarToast(`⚠️ Producto no encontrado (${codigo})`);
             return;
           }
-          const prod = catalogo.find(p => p.id === idProd);
-          addProduct(prod, 1);
 
-          await html5Qr.stop();
+          const prod = resultados[0];
+          let cantidad = 1;
+
+          if (prod._pesoDetectado) {
+            cantidad = prod._pesoDetectado;
+            delete prod._pesoDetectado;
+            mostrarToast(`⚖️ ${prod.nombre} (${cantidad.toFixed(3)} kg)`);
+          } else {
+            mostrarToast(`✅ ${prod.nombre}`);
+          }
+
+          addProduct(prod, cantidad);
+
+          try { await html5Qr.stop(); } catch {}
           contenedor.remove();
           scannerActivo = false;
         },
