--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>PROVEEDORA MATRIZ – RUTA DE VENTA 3.0 DESCUENTO LIBRE</title>
+  <title>PROVEEDORA MATRIZ – RUTA DE VENTA 3.0 </title>
   <meta name="theme-color" content="#0c6cbd">
   <link rel="manifest" href="./manifest.json">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
@@ -142,7 +142,7 @@
 <!-- 🔑 LOGIN -->
 <div id="loginScreen">
   <img id="loginLogo" src="logo_proveedora.webp" alt="Logo La Proveedora">
-  <h2>PROVEEDORA MATRIZ – RUTA DE VENTA 3.0 DESCUENTO LIBRE</h2>
+  <h2>PROVEEDORA MATRIZ – RUTA DE VENTA 3.0 </h2>
   <input id="loginUsuario" type="text" placeholder="Usuario"/>
   <input id="loginPassword" type="password" placeholder="Contraseña"/>
   <button id="btnLogin" class="btn">Entrar</button>
@@ -152,7 +152,7 @@
 <!-- 📦 POS -->
 <div id="posApp" style="display:none;">
   <header>
-    <span>PROVEEDORA MATRIZ – RUTA DE VENTA 3.0 DESCUENTO LIBRE</span>
+    <span>PROVEEDORA MATRIZ – RUTA DE VENTA 3.0 </span>
     <img src="logo_proveedora.webp" alt="Logo">
     <button id="btnLogout" 
       style="position:absolute; right:10px; top:10px; background:#c0392b; color:white;
