--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -1052,7 +1052,7 @@ Cajero: ${venta.atendio}
  📷 CÁMARA DE ALTA DEFINICIÓN (ZXing JS integrado)
 ======================================================= -->
 <script type="module">
-import { BrowserMultiFormatReader } from "https://cdn.jsdelivr.net/npm/@zxing/library@latest/esm/index.min.js";
+import { BrowserMultiFormatReader } from "https://cdn.jsdelivr.net/npm/@zxing/library@1.4.0/esm5/index.min.js";
 
 const btnCam = document.getElementById("btnCamGoogle");
 const video = document.createElement("video");
